session-07-kubernetes/evaluation/my-deployment-eval.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
        - name: mysql
          image: datascientest/mysql-k8s:1.0.0
          ports:
            - containerPort: 3306
        - name: api
          image: neuronaut73/user-api-eval:1.1
          ports:
            - containerPort: 8000
