session-07-kubernetes/evaluation/my-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: user-api-service
spec:
  type: ClusterIP
  selector:
    app: user-api
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
