session-07-kubernetes/evaluation/my-ingress-eval.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-api-ingress
spec:
  defaultBackend:
    service:
      name: user-api-service
      port:
        number: 8000
